Fixed about section text alignment and spacing

--- a/src/components/sections/About/styles.scss
+++ b/src/components/sections/About/styles.scss
@@ -13,6 +13,9 @@
 
 .about__description {
   max-width: 620px;
+}
+
+.about__description > * {
   margin: 0;
 }
 
@@ -26,7 +29,7 @@
 .about__text {
   display: flex;
   flex-direction: column;
-  gap: 6px;
+  gap: 20px;
   transition: gap 0.3s ease-in-out;
 }
 
@@ -41,6 +44,6 @@
   }
 
   .about__text {
-    gap: 18px;
+    gap: 30px;
   }
 }
